# spin-test-runner

./: Cargo.toml  README.md
component/: Cargo.toml
component/src/: bindings.rs  lib.rs
component/wit/: world.wit
src/: lib.rs  main.rs
wit/: world.wit
