[package]
name = "spin-test-runner-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cap-std = "2.0.1"
tokio = { version = "1.0", features = ["full"] }
wasmtime = "18.0"
wasmtime-wasi = "18.0"
wasmtime-wasi-http = "18.0.1"

[workspace]
members = ["component"]
