[package]
name = "spin-test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = "0.22.0"
spin-loader = { git = "https://github.com/fermyon/spin", branch = "main", default-features = false }
tokio = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:spin-test-runner"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "./wit/deps/http" }
"wasi:clocks" = { path = "./wit/deps/clocks" }
"wasi:io" = { path = "./wit/deps/io" }
